--- a/MUTT/tela-principal/Tela-princial.html
+++ b/MUTT/tela-principal/Tela-princial.html
@@ -57,7 +57,15 @@
                 <img src="imagens/Logo-Mizuno.png" alt="Logo">
                 <!-- Insere a logo da Mizuno -->
             </div>
-        </section> 
+        </section>
+            <h1>Novidades</h1>
+        <section class="Novidades">
+             <div class="Card-Novidades1">
+                <img src="imagens/Oakley Teeth Blue Grey-foto1.png" alt="imagem de tenis">
+                <p class="nome">Oakley Teeth Blue Grey</p>
+                <p class="preco">R$1249,99</p>
+             </div>
+        </section>
 
     </main> 
     <script src="Tela-pricipal.js"></script>
