--- a/Tela-login/Tela-Login.html
+++ b/Tela-login/Tela-Login.html
@@ -57,17 +57,18 @@
             </form>
 
             <div class="rgt">
-                    <p>Não tem uma conta? <a href="#">Criar uma conta</a></p>
+                    <p>Não tem uma conta? <a href="../Tela-Registro/Tela-Registro.html">Criar uma conta</a></p>
                 </div>
 
             <div>
-                <button type="button" onclick="Registrar()" class="Button">Entrar</button>
+                <button type="button" onclick=" Login_usuario()" class="Button">Entrar</button>
             </div>
         
         </section>
 
     </main> 
 
-    
+
+    <script src="Tela-login.js"></script>
 </body>
 </html>
