--- a/Tela-Registro/Tela-Registro.html
+++ b/Tela-Registro/Tela-Registro.html
@@ -61,13 +61,13 @@
             </div> -->
 
             <div>
-                <button class="Botao">Registrar</button>
+                <button id="Botao-registro" class="Botao" onclick="Registro_usuario()">Registrar</button>
             </div>
 
         </div>
         
     </main> 
 
-    
+    <script src="Tela-registro.js"></script>
 </body>
 </html>
