Update Oakley Teeth Blue Grey.html

--- a/Tela-produtos-oakley/Oakley Teeth Blue Grey/Oakley Teeth Blue Grey.html
+++ b/Tela-produtos-oakley/Oakley Teeth Blue Grey/Oakley Teeth Blue Grey.html
@@ -49,29 +49,29 @@
                     <h2>tamanhos</h2>
                     <div class="botoes">
                             <label class="botao-tamanho">
-                                <input type="radio" name="tamanho" value="38">
+                                <input type="radio" name="tamanho" id="38" value="38">
                             <label for="38">38</label>
                         </label>
                         <label class="botao-tamanho">
-                            <input type="radio" name="tamanho" value="39">
+                            <input type="radio" name="tamanho" id="39" value="39">
                             <label for="39">39</label>
                             </label>
                         <label class="botao-tamanho">
-                            <input type="radio" name="tamanho" value="40">
+                            <input type="radio" name="tamanho" id="40" value="40">
                             <label for="40">40</label>
                         </label>
                     </div>
                     <div class="botoes">
                         <label class="botao-tamanho">
-                            <input type="radio" name="tamanho" value="38">
+                            <input type="radio" name="tamanho" id="41" value="38">
                             <label for="41">41</label>
                         </label>
                         <label class="botao-tamanho">
-                            <input type="radio" name="tamanho" value="39">
+                            <input type="radio" name="tamanho" id="42" value="39">
                             <label for="42">42</label>
                         </label>
                         <label class="botao-tamanho">
-                            <input type="radio" name="tamanho" value="40">
+                            <input type="radio" name="tamanho" id="43" value="40">
                             <label for="43">43</label>
                         </label>
                     </div>
