--- a/Tela Login/Tela-login.html
+++ b/Tela Login/Tela-login.html
@@ -47,7 +47,7 @@
 
             </form>
 
-            <a href="">Criar conta</a>
+            <a href="../Tela-Registro/Tela-Registro.html">Criar conta</a>
 
             <div>
                 <button class="bn15" onclick="logar()">
