--- a/tela-principal/Tela-princial.html
+++ b/tela-principal/Tela-princial.html
@@ -43,18 +43,18 @@
         <section class="card-Marcas">
             <!-- Define a seção das marcas -->
             <div id="card-oakley" class="card-oakley">
-                    <!-- Define o card da marca Oakley -->
-                    <img src="imagens/Logos/Logo-oakley.png" alt="Logo" onclick="Tela_oakley()" >
-                    <!-- Insere a logo da Oakley -->
+                <!-- Define o card da marca Oakley -->
+                <img src="imagens/Logos/Logo-oakley.png" alt="Logo" onclick="Tela_oakley()" >
+                <!-- Insere a logo da Oakley -->
             </div>
             <div class="card-nike">
                 <!-- Define o card da marca Nike -->
-                <img src="imagens/Logos/Logo-Nike.png" alt="Logo">
+                <img src="imagens/Logos/Logo-Nike.png" alt="Logo" onclick="Tela_nike()">
                 <!-- Insere a logo da Nike -->
             </div>
             <div class="card-Mizuno">
                 <!-- Define o card da marca Mizuno -->
-                <img src="imagens/Logos/Logo-Mizuno.png" alt="Logo">
+                <img src="imagens/Logos/Logo-Mizuno.png" alt="Logo" onclick="Tela_mizuno()">
                 <!-- Insere a logo da Mizuno -->
             </div>
         </section>
