--- a/Tela-Registro/Tela-Registro.html
+++ b/Tela-Registro/Tela-Registro.html
@@ -70,7 +70,12 @@
             </div>
 
         </div>
-        
+        <div id="modalmsg" class="modalmsg">
+            <div class="conteudomsg">
+                <span class="close" onclick="fechar_modal_msg()">&times;</span>
+                <p id="modalMessage"></p>
+            </div>
+        </div>
     </main> 
 
     <script src="Tela-registro.js"></script>
