--- a/Tela-Registro/Tela-Registro.html
+++ b/Tela-Registro/Tela-Registro.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="user">
                     <!-- Define o ícone do usuário -->
-                    <img class="User-logo" src="imagens/imagens-header/User .png" alt="Carrinho">
+                    <img class="User-logo" src="imagens/imagens-header/User .png" alt="user" onclick="Login_Header()">
                     <!-- Insere a imagem do usuário -->
                     <p>Entrar</p>
                     <!-- Define o texto "Entrar" -->
