Update Oakley Teeth Blue Grey.html

--- a/Tela-produtos-oakley/Oakley Teeth Blue Grey/Oakley Teeth Blue Grey.html
+++ b/Tela-produtos-oakley/Oakley Teeth Blue Grey/Oakley Teeth Blue Grey.html
@@ -63,15 +63,15 @@
                     </div>
                     <div class="botoes">
                         <label class="botao-tamanho">
-                            <input type="radio" name="tamanho" id="41" value="38">
+                            <input type="radio" name="tamanho" id="41" value="41">
                             <label for="41">41</label>
                         </label>
                         <label class="botao-tamanho">
-                            <input type="radio" name="tamanho" id="42" value="39">
+                            <input type="radio" name="tamanho" id="42" value="42">
                             <label for="42">42</label>
                         </label>
                         <label class="botao-tamanho">
-                            <input type="radio" name="tamanho" id="43" value="40">
+                            <input type="radio" name="tamanho" id="43" value="43">
                             <label for="43">43</label>
                         </label>
                     </div>
@@ -82,7 +82,7 @@
                         </p>
                     </div>
                     <div class="Adcionar-carrinho">
-                        <button class="Button-Style" onclick="">Colocar no carrinho</button>
+                        <button class="Button-Style" onclick="colocar_carrinho('Oakley Teeth Blue Grey', 'Oakley tenis 1.png', '1249,99')">Colocar no carrinho</button>
                     </div>
                 </div>
             </section>
@@ -110,5 +110,6 @@
                 <img id="Logo-Cabecalho" class="MUTT-footer" src="imagens/imagens-header/Logo DARK.png" alt="Logo MUTT COMPANY" onclick="Logo_Header()">
             </footer>
     </main>
+    <script src="Oakley Teeth Blue Grey.js"></script>
 </body>
 </html>
