--- a/Tela-produtos-oakley/Oakley Teeth Blue Grey/Oakley-Teeth-Blue-Grey.html
+++ b/Tela-produtos-oakley/Oakley Teeth Blue Grey/Oakley-Teeth-Blue-Grey.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Oakley Teeth Blue Grey.css">
-    <title>Document</title>
+    <title>Oakley Teeth Blue Grey</title>
 </head>
 <body>
     <main class="Container-Principal">
@@ -46,6 +46,7 @@
                 </div>
                 <div class="Dados-pruduto">
                     <h1>Oakley Teeth Blue Grey</h1>
+                    <h2 class="Preco">RS 1.249,99</h2>
                     <h2>Tamanhos</h2>
                     <div class="botoes">
                             <label class="botao-tamanho">
