--- a/Tela-oakley/Tela-oakley.html
+++ b/Tela-oakley/Tela-oakley.html
@@ -121,6 +121,6 @@
             <img id="Logo-Cabecalho" class="MUTT-footer" src="imagens/imagens-header/Logo DARK.png" alt="Logo MUTT COMPANY" onclick="Logo_Header()">
         </footer>
     </main>
-    <script src="Tela-nike.js"></script>
+    <script src="Tela-oakley.js"></script>
 </body>
 </html>
