--- a/tela-principal/Tela-princial.html
+++ b/tela-principal/Tela-princial.html
@@ -64,7 +64,7 @@
             <div class="card-Novidades">
                 <!-- Contém os cards de novidades -->
 
-                <div class="Card-Novidades1">
+                <div class="Card-Novidades1" onclick="Tela_tenis_oakley()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-oakley/Oakley Teeth Blue Grey-foto1.png" alt="imagem de tenis">
                     <!-- Insere a imagem do produto -->
@@ -73,13 +73,13 @@
                     <p class="preco">R$ 1249,99</p>
                     <!-- Define o preço do produto -->
                 </div>
-                <div class="Card-Novidades2">
+                <div class="Card-Novidades2" onclick="Tela_tenis_airmax95()">
                     <!-- Define o segundo card de novidades -->
                     <img src="imagens/Produtos-nike/Nike Air Max 95 OG Neon Yellow-foto1.png" alt="imagem de tenis">
                     <!-- Insere a imagem do produto -->
                     <p class="nome">Nike Air Max 95</p>
                     <!-- Define o nome do produto -->
-                    <p class="preco">R$ 1.250,00</p>
+                    <p class="preco">R$ 1.249,99</p>
                     <!-- Define o preço do produto -->
                 </div>
                 <div class="Card-Novidades3">
@@ -99,7 +99,7 @@
             <!-- Define o título da seção de promoções -->
             <div class="card-Novidades">
                 <!-- Contém os cards de promoções -->
-                <div class="Card-Novidades1">
+                <div class="Card-Novidades1" onclick="Tela_jaqueta_oakley()">
                     <!-- Define o primeiro card de promoções -->
                     <img src="imagens/Produtos-oakley/Oakley x Piet Jaqueta Static Anorak Oliver-foto1.png" alt="imagem de tenis">
                     <!-- Insere a imagem do produto -->
@@ -107,7 +107,7 @@
                     <!-- Define o nome do produto -->
                     <p class="promocao">R$ 1249,99</p>
                     <!-- Define o preço promocional do produto -->
-                    <p class="preco">R$ 899,99</p>
+                    <p class="preco">R$ 1.199,00</p>
                     <!-- Define o preço original do produto -->
                 </div>
                 <div class="Card-Novidades2">
@@ -121,7 +121,7 @@
                     <p class="preco">R$ 950,00</p>
                     <!-- Define o preço original do produto -->
                 </div>
-                <div class="Card-Novidades3">
+                <div class="Card-Novidades3" onclick="Tela_tenis_tnpsg()">
                     <!-- Define o terceiro card de promoções -->
                     <img src="imagens/Produtos-nike/Nike Air Max Plus Paris Saint-Germain-foto1.png" alt="imagem d tenis">
                     <!-- Insere a imagem do produto -->
