--- a/Tela-nike/Tela-nike.html
+++ b/Tela-nike/Tela-nike.html
@@ -36,7 +36,7 @@
         <section class="oakley">
             <h1>N i k e</h1>
             <div class="pimeira_coluna">
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Tela_tenis_airmax95()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-nike/Nike Air Max 95 OG Neon Yellow-foto1.png" alt="imagem de tenis">
                     <!-- Insere a imagem do produto -->
@@ -46,9 +46,9 @@
                     <p class="preco">RS 1249,99</p>
                     <!-- Define o preço do produto -->
                 </div>
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Tela_tenis_tnpsg()">
                     <!-- Define o primeiro card de novidades -->
-                    <img src="imagens/Produtos-nike/Tn-psg.png" alt="imagem da Jaqueta">
+                    <img src="imagens/Produtos-nike/Tn-psg.png" alt="imagem do tenis">
                     <!-- Insere a imagem do produto -->
                     <p class="nome">Nike Air Max Plus Paris Saint-Germain</p>
                     <!-- Define o nome do produto -->
@@ -57,7 +57,7 @@
                     <p class="preco">RS 1.000,00</p>
                     <!-- Define o preço original do produto -->
                 </div>
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick=" Tela_jaqueta_nike()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-nike/nike x nocta.png" alt="imagem de tenis">
                     <!-- Insere a imagem do produto -->
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="pimeira_coluna">
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Tela_tenis_tnpurple()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-nike/Tn-purple.png" alt="imagem do Moletom">
                     <!-- Insere a imagem do produto -->
@@ -77,7 +77,7 @@
                     <p class="preco">RS 1.149,99</p>
                     <!-- Define o preço do produto -->
                 </div>
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Tela_tenis_tnpimento()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-nike/Tn-pimento.png" alt="imagem do Moletom">
                     <!-- Insere a imagem do produto -->
@@ -86,7 +86,7 @@
                     <p class="preco">RS 2.890,00</p>
                     <!-- Define o preço do produto -->
                 </div>
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Tela_tenis_vpmax()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-nike/Vapor max.png" alt="imagem do colete">
                     <!-- Insere a imagem do produto -->
