Update Oakley x Piet Moletom Monster Dog Solid Black.html

--- a/Tela-produtos-oakley/Oakley x Piet Moletom Monster Dog Solid Black/Oakley x Piet Moletom Monster Dog Solid Black.html
+++ b/Tela-produtos-oakley/Oakley x Piet Moletom Monster Dog Solid Black/Oakley x Piet Moletom Monster Dog Solid Black.html
@@ -78,7 +78,7 @@
                     <h2>Descricao</h2>
                     <div class="Descricao-Produto">                        
                         <p>
-                            A Oakley x Piet Jaqueta Static Anorak Olive, lançada em 08/12/2023 na cor verde, já está disponível na MUTT. Compre com confiança e garantia de originalidade!
+                            A Oakley x Piet Moletom Monster Dog Solid Black, lançada em 08/12/2023 na cor preto, já está disponível na MUTT. Compre com confiança e garantia de originalidade!
 
                         </p>
                     </div>
