--- a/Tela-oakley/Tela-oakley.html
+++ b/Tela-oakley/Tela-oakley.html
@@ -36,7 +36,7 @@
         <section class="oakley">
             <h1>O A K L E Y</h1>
             <div class="pimeira_coluna">
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Tela_oculos_oakley()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-oakley/Piet x Oakley oculos Eye Jacket Orange.png" alt="imagem de tenis">
                     <!-- Insere a imagem do produto -->
@@ -46,7 +46,7 @@
                     <p class="preco">RS 1249,99</p>
                     <!-- Define o preço do produto -->
                 </div>
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Tela_jaqueta_future_black()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-oakley/Colete Oakley x Piet The Future Black-foto1.png" alt="imagem da Jaqueta">
                     <!-- Insere a imagem do produto -->
@@ -57,7 +57,7 @@
                     <p class="preco">RS 1.000,00</p>
                     <!-- Define o preço original do produto -->
                 </div>
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Tela_tenis_oakley()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-oakley/Oakley Teeth Blue Grey-foto1.png" alt="imagem de tenis">
                     <!-- Insere a imagem do produto -->
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="pimeira_coluna">
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Tela_jaqueta_Dog()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-oakley/Oakley x Piet Moletom Monster Dog Solid Black-foto1.png" alt="imagem do Moletom">
                     <!-- Insere a imagem do produto -->
@@ -86,7 +86,7 @@
                     <p class="preco">RS 1249,99</p>
                     <!-- Define o preço do produto -->
                 </div>
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Tela_moletom_BigSkull()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-oakley/Camiseta Oakley x Piet Big Skull LS Brown-foto1.png" alt="imagem do colete">
                     <!-- Insere a imagem do produto -->
