--- a/Tela-carrinho/Tela-carrinho.html
+++ b/Tela-carrinho/Tela-carrinho.html
@@ -33,13 +33,21 @@
                 </div>
             </div>
         </header>
-        <section class="Primeira-sessao">
-            <h1>meu carrinho</h1>
-            <p id="nome_produto"></p>
-            <p id="tamanho_produto"></p>
-            <img id="img_produto" src="" alt="">
-            <p id="Valor_produto"></p>
-
+        <section class="informacoes">
+            <div class="Primeira-sessao">
+                <h1>meu carrinho</h1>
+                <p id="nome_produto"></p>
+                <p id="tamanho_produto"></p>
+                <img id="img_produto" src="" alt="">
+                <p id="Valor_produto"></p>
+            </div>
+            <div class="Segunda-sessao">
+                <h1>Resumo da compra</h1>
+                <p class="subtotal" id="subtotal"></p>
+                <p class="desconto"></p>
+                <p id="valortotal"></p>
+                <button>finalizae compra</button>
+            </div>
         </section>
     </main>
     <script src="Tela-carrinho.js"></script>
