--- a/Tela-mizuno/Tela-mizuno.html
+++ b/Tela-mizuno/Tela-mizuno.html
@@ -36,7 +36,7 @@
         <section class="oakley">
             <h1>M I Z U N O </h1>
             <div class="pimeira_coluna">
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="S_blue()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-mizuno/Mizuno Wave Prophecy 11S Blue.png" alt="imagem de tenis">
                     <!-- Insere a imagem do produto -->
@@ -48,7 +48,7 @@
                     <p class="preco">Rs 999,99</p>
                     <!-- Define o preço do produto -->
                 </div>
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="LS_seset()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-mizuno/Mizuno Wave Prophecy LS seset hig risk.png" alt="imagem da Jaqueta">
                     <!-- Insere a imagem do produto -->
@@ -59,7 +59,7 @@
                     <p class="preco">RS 2.499,99</p>
                     <!-- Define o preço original do produto -->
                 </div>
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Future_LS()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-mizuno/Mizuno Wave Prophecy LS-foto1.png" alt="imagem de tenis">
                     <!-- Insere a imagem do produto -->
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="pimeira_coluna">
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="cherry_miz()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-mizuno/mizuno-cherry.png" alt="imagem do Moletom">
                     <!-- Insere a imagem do produto -->
@@ -83,7 +83,7 @@
                     <p class="preco">RS 3.500,00</p>
                     <!-- Define o preço do produto -->
                 </div>
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="wave_10()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-mizuno/mizuno-wave 10.png" alt="imagem do Moletom">
                     <!-- Insere a imagem do produto -->
@@ -94,7 +94,7 @@
                     <p class="preco">RS 2.890,00</p>
                     <!-- Define o preço do produto -->
                 </div>
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Prophecy_gold()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-mizuno/Mizuno Wave Prophecy GOLD.png" alt="imagem do colete">
                     <!-- Insere a imagem do produto -->
