--- a/tela-produtos-mizuno/Mizuno Wave Rider 10 Sport White Silver/GCDS x Mizuno Wave Prophecy 8 Cherry.html
+++ b/tela-produtos-mizuno/Mizuno Wave Rider 10 Sport White Silver/GCDS x Mizuno Wave Prophecy 8 Cherry.html
@@ -111,6 +111,6 @@
                 <img id="Logo-Cabecalho" class="MUTT-footer" src="imagens/imagens-header/Logo DARK.png" alt="Logo MUTT COMPANY" onclick="Logo_Header()">
             </footer>
     </main>
-    <script src="Camiseta Oakley x Piet Big Skull LS Brown.js"></script>
+    <script src="GCDS x Mizuno Wave Prophecy 8 Cherry.js"></script>
 </body>
 </html>
