--- a/Tela-carrinho/Tela-carrinho.html
+++ b/Tela-carrinho/Tela-carrinho.html
@@ -37,13 +37,13 @@
             <div class="Primeira-sessao">
                 <h1>meu carrinho</h1>
                 <ul id="lista"></ul>
-                
+                <a href="../tela-principal/Tela-princial.html">continuar comprando</a>
             </div>
             <div class="Segunda-sessao">
                 <h1>Resumo da compra</h1>
                 <p class="subtotal" id="subtotal"></p>
-                <p class="desconto"></p>
-                <p id="valortotal"></p>
+                <p class="desconto" id="desconto"></p>
+                <p id="valortotal" ></p>
                 <button>finalizar compra</button>
             </div>
         </section>
