--- a/tela-principal/Tela-princial.html
+++ b/tela-principal/Tela-princial.html
@@ -82,7 +82,7 @@
                     <p class="preco">RS 1.249,99</p>
                     <!-- Define o preço do produto -->
                 </div>
-                <div class="Card-Novidades3">
+                <div class="Card-Novidades3" onclick="Tela_tenis_mizunols()">
                     <!-- Define o terceiro card de novidades -->
                     <img src="imagens/Produtos-mizuno/Mizuno Wave Prophecy LS-foto1.png" alt="imagem d tenis">
                     <!-- Insere a imagem do produto -->
@@ -110,7 +110,7 @@
                     <p class="preco">RS 1.199,00</p>
                     <!-- Define o preço original do produto -->
                 </div>
-                <div class="Card-Novidades2">
+                <div class="Card-Novidades2" onclick="Tela_tenis_mizunodesert()">
                     <!-- Define o segundo card de promoções -->
                     <img src="imagens/Produtos-mizuno/Mizuno Wave Prophecy LS Mojave Desert-foto1.png" alt="imagem de tenis">
                     <!-- Insere a imagem do produto -->
