--- a/Tela Login - Admin/Tela-login-Admin.html
+++ b/Tela Login - Admin/Tela-login-Admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="tela-Admin.css">
+    <link rel="stylesheet" href="Tela.css">
     <title>Login MUTT</title>
     
 </head>
@@ -37,7 +37,7 @@
         </header>
 
         <div class="Card-Registro">
-            <h1> L o g i n A d m i n</h1>
+            <h1> L o g i n </h1>
 
             <form>
 
@@ -47,8 +47,12 @@
 
             </form>
 
+            <a href="../Tela-Registro/Tela-Registro.html">Criar conta</a>
+            <a href="../Tela Login - Admin/Tela-login-Admin.html">Administrador</a>
+
+
             <div>
-                <button class="Button-Style" onclick="Entrar()">
+                <button class="Button-Style" onclick="logar()">
                     Logar
                 </button>
             </div>
@@ -57,6 +61,6 @@
         
     </main> 
 
-    <script src="Tela-login-Admin.js"></script>
+    <script src="Tela-login.js"></script>
 </body>
 </html>
