Tela-carrinho.html

--- a/Tela-carrinho/Tela-carrinho.html
+++ b/Tela-carrinho/Tela-carrinho.html
@@ -35,16 +35,17 @@
         </header>
         <section class="informacoes">
             <div class="Primeira-sessao">
-                <h1>meu carrinho</h1>
+                <h1 class="h1-mc">Meu carrinho</h1>
                 <ul id="lista"></ul>
-                <a href="../tela-principal/Tela-princial.html">continuar comprando</a>
+                <div class="continua-comprando"></div>
+                <a href="../tela-principal/Tela-princial.html"><button class="button-azul">Continuar comprando</button></a> 
             </div>
             <div class="Segunda-sessao">
-                <h1>Resumo da compra</h1>
+                <h1 class="h1-rc">Resumo da compra</h1>
                 <p class="subtotal" id="subtotal"></p>
                 <p class="desconto" id="desconto"></p>
                 <p id="valortotal" ></p>
-                <button>finalizar compra</button>
+                    <button class="button">Finalizar compra</button>
             </div>
         </section>
     </main>
