Update Camiseta Oakley x Piet Big Skull LS Brown.html

--- a/Tela-produtos-oakley/Camiseta Oakley x Piet Big Skull LS Brown/Camiseta Oakley x Piet Big Skull LS Brown.html
+++ b/Tela-produtos-oakley/Camiseta Oakley x Piet Big Skull LS Brown/Camiseta Oakley x Piet Big Skull LS Brown.html
@@ -9,7 +9,7 @@
 <body>
     <main class="Container-Principal">
         <!-- Define a seção principal do conteúdo da página -->
-        <header class="Cabecalho">
+        <header class="Cabecalho" onclick="carrinho_Header()">
             <!-- Define o cabeçalho da página -->
             <img id="Logo-Cabecalho" class="MUTT-logo" src="imagens/imagens-header/Logo DARK.png" alt="Logo MUTT COMPANY" onclick="Logo_Header()">
             <!-- Insere a logo da empresa, o `onclick="Logo_Header()"` chama a função JavaScript "Logo_Header()" quando a logo é clicada. -->
