--- a/Tela-produtos-nike/jaqueta_nocta_nike/jaqueta_nocta_nike.html
+++ b/Tela-produtos-nike/jaqueta_nocta_nike/jaqueta_nocta_nike.html
@@ -17,7 +17,7 @@
             <!-- Define o título do header -->
             <div class="icons">
                 <!-- Contém os ícones do carrinho e do usuário -->
-                <div class="carrinho">
+                <div class="carrinho" onclick="carrinho_Header()">
                     <!-- Define o ícone do carrinho -->
                     <img class="Carrinho-logo" src="imagens/imagens-header/Carrinho branco.png" alt="Carrinho">
                     <!-- Insere a imagem do carrinho -->
