--- a/Tela-oakley/Tela-oakley.html
+++ b/Tela-oakley/Tela-oakley.html
@@ -78,7 +78,7 @@
                     <!-- Define o preço do produto -->
                 </div>
 
-                <div class="card1-oakley">
+                <div class="card1-oakley" onclick="Tela_jaqueta_oakley()">
                     <!-- Define o primeiro card de novidades -->
                     <img src="imagens/Produtos-oakley/Oakley x Piet Jaqueta Static Anorak Oliver-foto1.png" alt="imagem do Moletom">
                     <!-- Insere a imagem do produto -->
